--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,21 @@ h1 {
   font-style: italic;
   font-size: 3.2rem;
   line-height: 135%;
+  position: relative;
+}
+.header .content .main::before {
+  content: '"';
+  font-size: 6.5rem;
+  position: absolute;
+  left: -1rem;
+  top: -1.5rem;
+}
+.header .content .main::after {
+  content: '"';
+  font-size: 6.5rem;
+  position: absolute;
+  right: -1rem;
+  bottom: -1.5rem;
 }
 .header .content .aside {
   font-family: "Raleway";
