--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
   padding: 1.5rem 0;
 }
 .navbar-nav li {
-  padding-left: 2rem;
+  padding: 1rem 0 1rem;
+  text-align: center;
 }
 .navbar-nav li.active {
   background-color: #e9ecf1;
