--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
+.loader {
+  background-color: #fcfcfc;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+  position: fixed;
+  z-index: 1000;
+}
+
 .navbar {
   background-color: #FCFCFC;
-  min-height: 6.5rem;
+  padding: 0.7rem 1rem;
 }
 .navbar-brand {
   display: inline-block;
@@ -100,7 +111,7 @@ h1 {
 
 .navbar-brand {
   font-family: "Montserrat";
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 700;
 }
 .navbar-nav li a {
