--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@
   font-size: 1.8rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  font-size: 1.6rem;
 }
 .navbar-nav .nav-item .btn.primary:hover {
   background-color: #2860c0;
