--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
 }
 .navbar-nav li.active a {
   font-weight: 600;
-  color: #3675E5;
+  color: #0a4ec2;
 }
 .navbar-nav li.active a:hover {
   color: #2860c0;
@@ -45,7 +45,7 @@
   color: #2860c0;
 }
 .navbar-nav .sep {
-  border-top: 1px solid rgba(54, 117, 229, 0.3);
+  border-top: 1px solid rgba(10, 78, 194, 0.3);
 }
 @media only screen and (min-width: 768px) {
   .navbar {
@@ -65,7 +65,7 @@
     background-color: #fcfcfc;
   }
   .navbar-nav li.active a {
-    color: #3675E5;
+    color: #0a4ec2;
   }
   .navbar-nav .sep {
     border-top: none;
@@ -119,7 +119,7 @@
 }
 
 .navbar-nav .nav-item .btn.primary {
-  background-color: #3675E5;
+  background-color: #0a4ec2;
   color: #fcfcfc;
   display: block;
   font-size: 1.6rem;
@@ -157,7 +157,7 @@
   font-size: 1.6rem;
   padding: 1.2rem;
   font-weight: 500;
-  background-color: #3675E5;
+  background-color: #0a4ec2;
   color: #fcfcfc;
 }
 @media only screen and (min-width: 540px) {
@@ -181,7 +181,7 @@
   padding: 1.2rem;
   font-weight: 500;
   background-color: #fcfcfc;
-  color: #3675E5;
+  color: #0a4ec2;
   margin-top: 2rem;
 }
 @media only screen and (min-width: 540px) {
@@ -313,7 +313,7 @@ h1 {
   content: "";
   height: 2px;
   width: 6.4rem;
-  background-color: #3675E5;
+  background-color: #0a4ec2;
   display: block;
   margin: 0.8rem auto 2.4rem;
 }
@@ -339,7 +339,7 @@ h1 {
   content: "";
   height: 2px;
   width: 6.4rem;
-  background-color: #3675E5;
+  background-color: #0a4ec2;
   display: block;
   margin: 0.8rem 0 2.4rem;
 }
@@ -349,7 +349,7 @@ h1 {
 }
 .with-us .content .info .at {
   font-weight: 500;
-  color: #3675E5;
+  color: #0a4ec2;
 }
 .with-us .content .info .at .label {
   font-weight: 700;
@@ -376,7 +376,7 @@ footer > * h2::after {
   content: "";
   height: 2px;
   width: 6.4rem;
-  background-color: #3675E5;
+  background-color: #0a4ec2;
   display: block;
   width: 3.2rem;
   background-color: #fcfcfc;
@@ -495,7 +495,7 @@ footer > * ul li a {
   grid-template-columns: 3.6rem auto;
 }
 .with-us .pictwo {
-  background-image: linear-gradient(to right, rgba(54, 117, 229, 0.65), rgba(54, 117, 229, 0.65)), url("../img/worship.png");
+  background-image: linear-gradient(to right, rgba(10, 78, 194, 0.65), rgba(10, 78, 194, 0.65)), url("../img/worship.png");
   height: 100%;
   grid-column: 1/span 1;
   background-size: cover;
