--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 }
 .navbar-brand .logolabel {
   display: inline-block;
-  color: #0849b9;
+  color: #1455c5;
 }
 .navbar-nav {
   padding: 1.5rem 0 0;
@@ -37,7 +37,7 @@
 }
 .navbar-nav li.active a {
   font-weight: 600;
-  color: #0849b9;
+  color: #1455c5;
 }
 .navbar-nav li.active a:hover {
   color: #0c3b8d;
@@ -46,7 +46,7 @@
   color: #0c3b8d;
 }
 .navbar-nav .sep {
-  border-top: 1px solid rgba(8, 73, 185, 0.3);
+  border-top: 1px solid rgba(20, 85, 197, 0.3);
 }
 @media only screen and (min-width: 768px) {
   .navbar {
@@ -66,7 +66,7 @@
     background-color: #fcfcfc;
   }
   .navbar-nav li.active a {
-    color: #0849b9;
+    color: #1455c5;
   }
   .navbar-nav .sep {
     border-top: none;
@@ -120,7 +120,7 @@
 }
 
 .navbar-nav .nav-item .btn.primary {
-  background-color: #0849b9;
+  background-color: #1455c5;
   color: #fcfcfc;
   display: block;
   font-size: 1.6rem;
@@ -158,7 +158,7 @@
   font-size: 1.6rem;
   padding: 1.2rem;
   font-weight: 500;
-  background-color: #0849b9;
+  background-color: #1455c5;
   color: #fcfcfc;
 }
 @media only screen and (min-width: 540px) {
@@ -182,7 +182,7 @@
   padding: 1.2rem;
   font-weight: 500;
   background-color: #fcfcfc;
-  color: #0849b9;
+  color: #1455c5;
   margin-top: 2rem;
 }
 @media only screen and (min-width: 540px) {
@@ -314,7 +314,7 @@ h1 {
   content: "";
   height: 2px;
   width: 6.4rem;
-  background-color: #0849b9;
+  background-color: #1455c5;
   display: block;
   margin: 0.8rem auto 2.4rem;
 }
@@ -340,7 +340,7 @@ h1 {
   content: "";
   height: 2px;
   width: 6.4rem;
-  background-color: #0849b9;
+  background-color: #1455c5;
   display: block;
   margin: 0.8rem 0 2.4rem;
 }
@@ -350,7 +350,7 @@ h1 {
 }
 .with-us .content .info .at {
   font-weight: 500;
-  color: #0849b9;
+  color: #1455c5;
 }
 .with-us .content .info .at .label {
   font-weight: 700;
@@ -377,7 +377,7 @@ footer > * h2::after {
   content: "";
   height: 2px;
   width: 6.4rem;
-  background-color: #0849b9;
+  background-color: #1455c5;
   display: block;
   width: 3.2rem;
   background-color: #fcfcfc;
@@ -496,7 +496,7 @@ footer > * ul li a {
   grid-template-columns: 3.6rem auto;
 }
 .with-us .pictwo {
-  background-image: linear-gradient(to right, rgba(8, 73, 185, 0.65), rgba(8, 73, 185, 0.65)), url("../img/worship.png");
+  background-image: linear-gradient(to right, rgba(20, 85, 197, 0.65), rgba(20, 85, 197, 0.65)), url("../img/worship.png");
   height: 100%;
   grid-column: 1/span 1;
   background-size: cover;
