--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,7 @@ footer > * ul li a {
   }
   .welcome__section-container .content--pic img {
     height: 100%;
+    max-height: 28rem;
     width: auto;
     margin: 0 auto;
   }
