made welcome section bg darker

--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ footer > * ul li a {
 }
 
 .welcome__section {
-  background-color: #fcfcfc;
+  background-color: #e9ecf1;
 }
 .welcome__section-container {
   padding: 8.8rem 3.2rem 5.6rem;
