--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@
 .navbar {
   background-color: #FCFCFC;
   padding: 0.8rem 1.6rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 .navbar-brand {
   display: inline-flex;
