pushed header down

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,6 +6,7 @@
     padding: 9.6rem 3rem 9.6rem;
     z-index: 50;
     position: relative;
+    margin-top: 6.6rem;
 
     .ctas {
         width: 80%;
