--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -9,5 +9,5 @@ $color-primary-lightest: #f6f7fa;
 $color-blue-dark: #06369d;
 $color-primary-darker: #0a41a1;
 $color-primary-darkest: #041C47;
-
+$color-secondary: rgb(240, 166, 48);
 $color-standout: #6599fa;
