--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: $color-primary-darker;
+    background-color: $color-primary-darkest;
     padding: 8.8rem 6.4rem 6.4rem;
 
     &>*:not(:first-child){
