--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,9 @@
 .header {
-    background-image: linear-gradient(to right, rgba(48,48,48,0.3),rgba(48,48,48,0.3)), url('../img/headerbg1-mob.jpg');
+    background-image: linear-gradient(
+        45deg, 
+        rgba(204, 142, 42, 0.2), 
+        rgba(48, 48, 48, 0.3)), 
+        url("../img/headerbg1.jpg");
     background-position: center;
     min-height: 40rem;
     background-size: cover;
@@ -24,8 +28,11 @@
     }
 
     @media only screen and (min-width: 645px) {
-        background-image: linear-gradient(to right, rgba(48,48,48,0.3),rgba(48,48,48,0.3)), url('../img/headerbg1.jpg');
-        // background-attachment: fixed;
+        background-image: linear-gradient(
+            45deg, 
+            rgba(204, 142, 42, 0.2), 
+            rgba(48, 48, 48, 0.3)), 
+            url("../img/headerbg1.jpg");        // background-attachment: fixed;
         padding: 20.6rem 3rem 24rem;
 
         .ctas {
