increases nav font size

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,9 @@ body {
   font-size: 1.6rem;
   font-weight: 700;
 }
+.navbar-nav li {
+  font-size: 1.8rem;
+}
 .navbar-nav li a {
   color: #303030;
 }
