--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -18,6 +18,7 @@ body {
     }
     &-nav {
         li {
+            font-size: 1.8rem;
             a{
                 color: $color-black-dark;
             }
