--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,15 @@
 }
 
 .navbar {
-  background-color: #FCFCFC;
+  background-color: #fff;
   padding: 0.8rem 1.6rem;
   position: fixed;
   width: 100%;
   z-index: 1000;
   top: 0;
+}
+.navbar.over {
+  box-shadow: 0 16px 60px rgba(65, 65, 65, 0.1);
 }
 .navbar-brand {
   display: inline-flex;
@@ -67,7 +70,7 @@
     align-self: center;
   }
   .navbar-nav li.active {
-    background-color: #fcfcfc;
+    background-color: #fff;
   }
   .navbar-nav li.active a {
     color: #1455c5;
