--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@
   background-image: linear-gradient(45deg, rgba(204, 142, 42, 0.2), rgba(48, 48, 48, 0.3)), url("../img/headerbg1.jpg");
   background-position: center;
   min-height: 40rem;
-  background-size: cover;
+  background-size: auto 200%;
   padding: 12rem 3rem 9.6rem;
   margin-top: 70px;
   z-index: 50;
@@ -98,6 +98,7 @@
   .header {
     padding: 10.5rem 3rem 14.8rem;
     min-height: 50rem;
+    background-size: cover;
   }
   .header .ctas {
     display: flex;
