--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,7 +6,7 @@
         url("../img/headerbg1.jpg");
     background-position: center;
     min-height: 40rem;
-    background-size: cover;
+    background-size: auto 200%;
     padding: 12rem 3rem 9.6rem;
     margin-top: 70px;
     z-index: 50;
@@ -20,6 +20,7 @@
     @media only screen and (min-width:540px) {
         padding: 10.5rem 3rem 14.8rem;
         min-height: 50rem;
+        background-size: cover;
 
         .ctas {
             display: flex;
