--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,9 @@
 
 .header {
   background-image: linear-gradient(45deg, rgba(204, 142, 42, 0.2), rgba(48, 48, 48, 0.3)), url("../img/headerbg1.jpg");
-  background-position: center;
+  background-position: center 0;
   min-height: 40rem;
-  background-size: auto 200%;
+  background-size: auto 110%;
   padding: 12rem 3rem 9.6rem;
   margin-top: 70px;
   z-index: 50;
