--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -184,6 +184,7 @@ footer {
             &::after {
                 @include afterdash;
                 width: 3.2rem;
+                background-color: #fff;
                 margin: 0.5rem 0 0.8rem;
             }
         }
