--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,7 +13,7 @@
     position: relative;
 
     .ctas {
-        width: 80%;
+        width: 90%;
         margin: 3.2rem auto 0rem;
     }
 
@@ -21,6 +21,7 @@
         padding: 10.5rem 3rem 14.8rem;
         min-height: 50rem;
         background-size: cover;
+        background-position: center;
 
         .ctas {
             display: flex;
@@ -35,7 +36,7 @@
             rgba(204, 142, 42, 0.2), 
             rgba(48, 48, 48, 0.3)), 
             url("../img/headerbg1.jpg");        // background-attachment: fixed;
-        padding: 20.6rem 3rem 24rem;
+        padding: 14.6rem 3rem 24rem;
 
         .ctas {
             width: 46.4rem;
